Adjusted yellow slider to position correctly on mobile and desktop

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -5,6 +5,7 @@
     background-color: var(--darkBlue);
     position: relative;
     margin-right: 0;
+    max-height: 100rem;
 }
 
 @media screen and (max-width: 768px) {
@@ -45,18 +46,18 @@
         padding-left: 1rem;
         padding-right: 1rem;
         padding-top: 4rem;
-        padding-bottom: 6rem;
+        padding-bottom: 0;
         margin-top: 4rem;
         margin-bottom: 4rem;
     }
 }
 
 .whitePageR {
-    width: 85%;
+    width: 100%;
     background-color: var(--offWhite);
     margin-top: 3rem;
     margin-bottom: 3rem;
-    padding-left: 6rem;
+    padding-left: 3rem;
     padding-top: 3rem;
     padding-bottom: 17rem;
     box-shadow: 0px 0px 12px -2px rgba(0,0,0,0.75);
@@ -64,11 +65,18 @@
     -moz-box-shadow: 0px 0px 12px -2px rgba(0,0,0,0.75);
 }
 
+@media screen and (max-width: 768px) {
+    .whitePageR {
+        margin-right: 2.5rem;
+        padding-right: 1.5rem;
+    }
+}
+
 .whitePageL {
+    width: 100%;
     background-color: var(--offWhite);
     margin-top: 3rem;
     margin-bottom: 3rem;
-    width: 100%;
     padding-left: 3rem;
     padding-top: 3rem;
     padding-bottom: 17rem;
@@ -79,7 +87,8 @@
 
 @media screen and (max-width: 768px) {
     .whitePageL {
-        margin-left: 2rem;
+        margin-left: 2.5rem;
+        padding-left: 1.5rem;
     }
 }
 
