--- a/styles/typography.css
+++ b/styles/typography.css
@@ -11,9 +11,15 @@ p {
     }
 }
 
-p.bodyPL{
+.bodyPL{
     padding-bottom: 2rem;
     margin-right: 4rem;
+}
+
+@media screen and (max-width: 768px) {
+    .bodyPL {
+        margin-right: 6rem;
+    }
 }
 
 p.bodyPR{
@@ -48,7 +54,8 @@ h2 {
     font-size: calc(40px + 1.5vw);
     color: var(--darkBlue);
 	text-decoration: none;
-	text-transform: capitalize; /* for backup fonts */
+    text-transform: capitalize; /* for backup fonts */
+    margin-bottom: 4rem;
 }
 
 @media screen and (max-width: 768px) {
@@ -192,4 +199,14 @@ a.currentPage {
 	padding-bottom: 2px;
 	border-bottom: 4px solid var(--darkBlue);
 	transition: all .1s ease-in;
+}
+
+.devText {
+    width: 80%;
+}
+
+@media screen and (max-width: 768px) {
+    .devText {
+        width: 90%;
+    }
 }
